# workflowyMCP

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlint.jsonc  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  fly.toml.example  package-lock.json  package.json
.claude/: settings.json
.claude/skills/concept-map/: SKILL.md
.claude/skills/wmanage/: SKILL.md
.github/workflows/: dependency-check.yml  test.yml
.speckit/: config.json
Evals/: README.md  RUNNER.md  evals.json
coverage/: coverage-final.json  index.html
coverage/api/: dropbox.ts.html  index.html  retry.ts.html  workflowy.ts.html
coverage/config/: environment.ts.html  index.html
coverage/types/: index.html  index.ts.html
coverage/utils/: cache.ts.html  index.html  keyword-extraction.ts.html  node-paths.ts.html  text-processing.ts.html
docs/: REMOTE-CONNECTOR.md  SETUP.md
scripts/: auto-bundle-skill.sh  bundle-skill.sh  deploy.sh  repro-write-path-429.sh
specs/: constitution.md  implementation-plan.md  principles-architecture.md  principles-development.md  principles-mcp.md  principles-security.md  specification.md  tasks.md  traceability.md
src/: audit.rs  config.rs  defaults.rs  error.rs  index.ts  lib.rs  main.rs  server.rs  types.rs  validation.rs  workflows.rs
src/api/: client.rs  dropbox.ts  mod.rs  retry.ts
src/cli/: concept-map-outline.test.ts  concept-map-outline.ts  concept-map.ts  concept_map.rs  mod.rs  render-concept-map.test.ts  render-concept-map.ts  setup.ts  task-map.ts  task_map.rs
src/mcp/: backlinks.test.ts  bulk-update.test.ts  concept-map-tools.test.ts  daily-review.test.ts  due-dates.test.ts  duplicate-node.test.ts  find-node.test.ts  hierarchical-insert.test.ts  project-summary.test.ts  recent-changes.test.ts  search-nodes.test.ts  server.ts  smart-insert.test.ts  tag-search.test.ts  template.test.ts  todo-management.test.ts
src/server/: auth.rs  http.rs  mod.rs  params.rs
src/shared/api/: dropbox.ts  workflowy.ts
src/shared/config/: environment.ts
src/shared/types/: index.ts
src/shared/utils/: cache.test.ts  cache.ts  concept-map-html.test.ts  concept-map-html.ts  date-parser.test.ts  date-parser.ts  graph-analysis.test.ts  graph-analysis.ts  jobQueue.ts  keyword-extraction.test.ts  keyword-extraction.ts  large-markdown-converter.test.ts  large-markdown-converter.ts  markdown-converter.test.ts  markdown-converter.ts  orchestrator.test.ts  orchestrator.ts  rateLimiter.test.ts  rateLimiter.ts  requestQueue.test.ts  requestQueue.ts  scope-utils.test.ts  scope-utils.ts  subtree-parser.test.ts  subtree-parser.ts  tag-parser.test.ts  tag-parser.ts  task-map.test.ts  task-map.ts  text-processing.test.ts  text-processing.ts
src/tools/: insert.rs  mod.rs  search.rs
src/types/: index.ts
src/utils/: aggregation.rs  cache.rs  cancel.rs  concept_map.rs  date_parser.rs  error_class.rs  html.rs  idempotency.rs  job_queue.rs  lenient_int.rs  link_parser.rs  mod.rs  name_index.rs  node-paths.ts  node_paths.rs  op_log.rs  orchestrator.rs  rate_limiter.rs  request_queue.rs  subtree.rs  tag_parser.rs  task_map.rs  text-processing.test.ts  text-processing.ts  text_processing.rs  truncation_envelope.rs  usage_log.rs
tasks/: reliability-and-ergonomics.md
tasks/eval-runs/: run-20260425T194943Z.json
templates/secondbrain/: README.md
templates/secondbrain/briefs/: .gitkeep
templates/secondbrain/drafts/: .gitkeep
templates/secondbrain/memory/: distillation_taxonomy.md  services.md  workflowy_node_links.md
templates/secondbrain/session-logs/: .gitkeep
templates/skills/wflow/: LICENSE  SKILL.md
tests/: live_insert.rs  proptest_node_id.rs  scripted_session.rs  skill_allowed_tools.rs  template_portability.rs  traceability.rs  wflow_eval_coverage.rs
