[package]
name = "workflowy-mcp-server"
version = "2.0.0"
edition = "2021"
description = "MCP server for Workflowy content management, built with rmcp"
license = "MIT"

[[bin]]
name = "workflowy-mcp-server"
path = "src/main.rs"

[[bin]]
name = "task-map"
path = "src/cli/task_map.rs"

[[bin]]
name = "wflow-do"
path = "src/bin/wflow_do.rs"

[dependencies]
# Floor versions match the latest stable releases as of 2026-05-09.
# Top-level deps not bumped to a new major: rmcp (0.16 → 1.x is a
# breaking upgrade and our `Parameters` wrapper-name contract
# [C-server-003] is pinned against rmcp-macros 0.16; a 1.x upgrade
# needs deliberate review of the macro's discovery mechanism),
# reqwest (0.12 → 0.13 is breaking with no observed benefit), rand
# (0.8 → 0.10 breaks getrandom-shaped APIs we don't need), sha2
# (0.10 → 0.11 breaks Digest API in places; the params hash works
# fine on 0.10).
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
# `dotenv 0.15` is unmaintained (last release Sept 2020). `dotenvy`
# is the drop-in maintained fork; same `dotenvy::dotenv()` entry
# point, identical `.env` semantics. Switched 2026-05-09.
dotenvy = "0.15"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
parking_lot = "0.12"
clap = { version = "4.6", features = ["derive"] }
futures = "0.3"
lazy_static = "1.5"
rand = "0.8"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1.2"
sha2 = "0.10"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
proptest = "1.4"
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
