[package]
name = "workflowy-mcp-server"
version = "2.0.0"
edition = "2021"
description = "MCP server for Workflowy content management, built with rmcp"
license = "MIT"

[[bin]]
name = "workflowy-mcp-server"
path = "src/main.rs"

[[bin]]
name = "task-map"
path = "src/cli/task_map.rs"

[[bin]]
name = "wflow-do"
path = "src/bin/wflow_do.rs"

# Remote MCP connector for claude.ai (web/desktop/mobile): the same
# WorkflowyMcpServer tool surface as the stdio binary, served over
# Streamable HTTP behind an OAuth resource-server gate. See
# docs/REMOTE-CONNECTOR.md.
[[bin]]
name = "workflowy-mcp-http"
path = "src/bin/mcp_http.rs"

[dependencies]
# Floor versions match the latest stable releases as of 2026-05-24.
# `rmcp 1.x` confirmed compatible with our `Parameters` wrapper-name
# contract [C-server-003] — rmcp-macros 1.7 still identifier-matches
# the literal name `Parameters` on the function-arg type. The
# `ServerInfo`/`Implementation` structs are now `#[non_exhaustive]`, so
# construction routes through their builders (`ServerInfo::new` +
# `with_*`, `Implementation::new`) rather than struct literals.
# `reqwest 0.13` ships rustls + aws-lc-rs as the default TLS backend
# (down from native-tls in 0.12); the API surface we touch (Client,
# Client::builder, header::HeaderMap, Error) is unchanged.
tokio = { version = "1.52", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
# `dotenv 0.15` is unmaintained (last release Sept 2020). `dotenvy`
# is the drop-in maintained fork; same `dotenvy::dotenv()` entry
# point, identical `.env` semantics. Switched 2026-05-09.
dotenvy = "0.15"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
parking_lot = "0.12"
clap = { version = "4.6", features = ["derive"] }
futures = "0.3"
lazy_static = "1.5"
rand = "0.10"
rmcp = { version = "1.7", features = [
    "server",
    "transport-io",
    # Remote-connector transport for claude.ai custom connectors: the
    # server-side Streamable HTTP service + its in-memory session store,
    # mounted into axum via the `tower` Service impl. The stdio binary
    # (Claude Desktop) keeps using "transport-io" unchanged.
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "tower",
] }
schemars = "1.2"
sha2 = "0.11"
# Remote-connector HTTP surface (workflowy-mcp-http binary only). axum
# hosts the rmcp Streamable HTTP service + the OAuth resource-server
# metadata/gate; jsonwebtoken validates the managed provider's JWTs
# against its JWKS. The stdio server binary does not link these paths.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
jsonwebtoken = "9"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
proptest = "1.4"
tempfile = "3"
wiremock = "0.6"
# Drives the connector axum Router in unit tests via ServiceExt::oneshot
# (no socket bind) — see src/server/http.rs tests.
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
